<resources>
    <string name="app_name">BTC-E Client</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">BTC-E Client</string>
    <string name="edit">Edit</string>

    <string name="min_24h">24h min</string>
    <string name="max_24h">24h max</string>
    <string name="avg_24h">24h avg</string>
    <string name="last_deal">Last deal</string>
    <string name="trade_volume">Volume</string>
    <string name="ask">Ask</string>
    <string name="bid">Bid</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="place_order">Create</string>
    <string name="collapse">Cancel</string>
    <string name="amount">Amount:</string>
    <string name="price">Price:</string>
    <string name="total">Total:</string>
    <string name="new_order">+</string>
    <string name="open_balance">Balance:</string>
    <string name="active_orders">Orders</string>
    <string name="orders_history">History</string>
    <string name="Balance">Balance</string>
    <string name="all_pairs">All pairs</string>
    <string name="all_types">All types</string>
    <string name="order_created">Order successfully created</string>
    <string name="set_max">[set max]</string>
    <string name="set_current">[set current]</string>
    <string name="chart">Chart</string>
    <string name="no_active_orders">You have no active orders</string>
    <string name="no_connection">No Internet connection</string>
    <string name="add">Add</string>
    <string name="sign_in">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secret">Secret</string>
    <string name="api_key">API key</string>
</resources>
