<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nf.co.xine.btc_eclient.CurrencyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            style="@style/tiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/tiles_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_24h" />

            <TextView
                android:id="@+id/min_24h"
                style="@style/tiles_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/tiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/tiles_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_24h" />

            <TextView
                android:id="@+id/max_24h"
                style="@style/tiles_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/tiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/tiles_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_deal" />

            <TextView
                android:id="@+id/last_deal"
                style="@style/tiles_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
    <!--

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/tiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/tiles_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_24h" />

                <TextView
                    android:id="@+id/avg_24h"
                    style="@style/tiles_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8500" />
            </LinearLayout>

            <LinearLayout
                style="@style/tiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/tiles_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_deal" />

                <TextView
                    android:id="@+id/last_deall"
                    style="@style/tiles_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="482.3512" />
            </LinearLayout>
        </LinearLayout>-->

    <LinearLayout
        android:id="@+id/place_order_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false">

            <LinearLayout
                style="@style/tiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/buy_balance_header"
                    style="@style/tiles_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USD balance" />

                <TextView
                    android:id="@+id/buy_balance"
                    style="@style/tiles_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.45142580" />
            </LinearLayout>

            <LinearLayout
                style="@style/tiles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sell_balance_header"
                    style="@style/tiles_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BTC balance" />

                <TextView
                    android:id="@+id/sell_balance"
                    style="@style/tiles_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.41804512" />
            </LinearLayout>
        </LinearLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_buy"
                style="@style/radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:checked="true"
                android:text="@string/buy" />

            <RadioButton
                android:id="@+id/radio_sell"
                style="@style/radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:checked="false"
                android:text="@string/sell" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                style="@style/tiles_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/amount_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="4"
                android:gravity="end"
                android:hint="BTC"
                android:inputType="numberDecimal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/price" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ems="4"
                android:gravity="end"
                android:hint="USD"
                android:id="@+id/price_edit"
                android:inputType="numberDecimal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:text="@string/total" />

            <TextView
                style="@style/tiles_values"
                android:id="@+id/total_new_order_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="400 USD" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <Button
                android:id="@+id/place_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_order" />

            <Button

                android:id="@+id/collapse_order_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collapse" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ask"
                android:gravity="center"/>
            <Button
                android:id="@+id/new_buy_order"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buy"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bid"
                android:gravity="center"/>
            <Button
                android:id="@+id/new_sell_order"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sell"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orders_list_refresh">
        <ListView
            android:id="@+id/orders_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
